--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,9 @@ gradle-app.setting
 # Avoid ignoring Gradle wrapper jar file (.jar files are usually ignored)
 !gradle-wrapper.jar
 
+/app/keystore
+/app/release
+
 
 ### Android template
 # Built application files
