--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,12 +38,12 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation "com.android.support:appcompat-v7:$support_version"
-    implementation 'com.android.support.constraint:constraint-layout:1.1.1'
-    implementation "com.android.support:palette-v7:$support_version"
-    implementation "com.android.support:design:$support_version"
-    implementation 'com.jakewharton:butterknife:8.8.1'
-    kapt 'com.jakewharton:butterknife-compiler:8.8.1'
+
+    implementation "androidx.appcompat:appcompat:1.1.0-alpha5"
+    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    implementation "androidx.palette:palette:$androidx_version"
+
+    implementation "com.google.android.material:material:1.1.0-alpha06"
 
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
