--- a/build.gradle
+++ b/build.gradle
@@ -1,15 +1,19 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.3.0'
-    ext.support_version = '28.0.0'
+    ext {
+        kotlin_version = '1.3.31'
+        support_version = '28.0.0'
+        app_compat = '1.0.2'
+        androidx_version = '1.0.0'
+    }
 
     repositories {
         google()
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.2.1'
+        classpath 'com.android.tools.build:gradle:3.4.0'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 
         // NOTE: Do not place your application dependencies here; they belong
